# prose-core-client

./: .gitignore  CHANGELOG.md  Cargo.toml  INTERNALS.md  Makefile  README.md  build.rs  cliff-release-notes.toml  cliff.toml  prose.doap  rust-toolchain.toml  uniffi.toml
bindings/prose-core-client-wasm/: .gitignore  Cargo.toml
bindings/prose-core-client-wasm/js/: strophejs-connection.ts
bindings/prose-core-client-wasm/src/: client.rs  delegate.rs  error.rs  lib.rs
bindings/prose-core-client-wasm/src/cache/: data_cache.rs  mod.rs
bindings/prose-core-client-wasm/src/connector/: mod.rs  strophe_js.rs
bindings/prose-core-client-wasm/src/types/: contact.rs  jid.rs  js_array.rs  message.rs  mod.rs  user_profile.rs
bindings/prose-core-client-wasm/src/util/: interval.rs  (+2 more)
bindings/prose-sdk-ffi/: .gitignore  Cargo.toml  build.rs  uniffi.toml
bindings/prose-sdk-ffi/Swift/: Color.swift  MucId.swift  UserId.swift
bindings/prose-sdk-ffi/src/: account_bookmarks_client.rs  client.rs  lib.rs  logger.rs  prose_sdk_ffi.udl  uniffi_api.rs
bindings/prose-sdk-js/: Cargo.toml  README.md  package.json
bindings/prose-sdk-js/js/: strophejs-connection.ts
bindings/prose-sdk-js/src/: client.rs  delegate.rs  error.rs  error_hook.rs  lib.rs
crates/prose-core-client/: Cargo.toml
crates/prose-core-client/examples/: cli.rs
crates/prose-core-client/migrations/: 001_init.sql  003_add_drafts.sql  004_optional_avatar_md_dimensions.sql  005_update_user_profile.sql  006_add_roster_item_name.sql  007_limit_roster_item_to_single_group.sql  008_add_is_me_to_roster_item.sql  008_optional_to_in_messages.sql
crates/prose-core-client/src/: client.rs  client_builder.rs  client_event.rs  lib.rs
crates/prose-core-client/tests/: account_service.rs  caps_handling.rs  connection_service.rs  contacts_service.rs  handle_iq_requests.rs  in_memory_sidebar_repository.rs  load_messages.rs  messages_event_handler.rs  requests_event_handler.rs  resource_lookup.rs  room.rs  rooms_domain_service.rs  rooms_event_handler.rs  rooms_service.rs  sidebar_domain_service.rs  sidebar_service.rs  user_data_service.rs  user_info_domain_service.rs  user_state_event_handler.rs
crates/prose-domain/: Cargo.toml
crates/prose-domain/src/: lib.rs
crates/prose-proc-macros/: Cargo.toml
crates/prose-proc-macros/src/: lib.rs
crates/prose-store/: Cargo.toml
crates/prose-store/src/: entity_macro.rs  lib.rs  prelude.rs  repository.rs  store.rs
crates/prose-utils/: Cargo.toml
crates/prose-utils/src/: id_string_macro.rs  lib.rs
crates/prose-wasm-utils/: Cargo.toml
crates/prose-wasm-utils/src/: future_ext.rs  lib.rs  receiver_stream.rs  stream_ext.rs
crates/prose-xmpp/: Cargo.toml
crates/prose-xmpp/src/: event.rs  lib.rs
crates/prose-xmpp/tests/: bookmark_mod.rs  chat_mod.rs  muc_mod.rs
examples/prose-core-client-cli/: Cargo.toml
examples/prose-core-client-cli/src/: main.rs  type_display.rs  type_selection.rs
examples/xmpp-client/: Cargo.toml
examples/xmpp-client/src/: main.rs
prose_core_client/: Cargo.toml
prose_core_client/examples/: .env.example  cli.rs  hello_bot.rs
prose_core_client/src/: lib.rs
prose_core_client/src/bookmarks/: account_bookmarks_client.rs
prose_core_client/src/broker/: mod.rs
prose_core_client/src/cache/: avatar_cache.rs  data_cache.rs  fs_avatar_cache.rs  mod.rs  noop_avatar_cache.rs
prose_core_client/src/client/: client.rs  client_context.rs  client_delegate.rs  mod.rs  module_delegate.rs
prose_core_client/src/domain_ext/: availability.rs  chat_state.rs  message.rs  mod.rs  user_profile.rs
prose_core_client/src/protocol/: message.rs  mod.rs  namespaces.rs  presence.rs  registries.rs
prose_core_client/src/test_helpers/: incrementing_id_provider.rs  message_builder.rs  mod.rs
prose_core_client/src/types/: account_settings.rs  avatar_metadata.rs  capabilities.rs  error.rs  message_like.rs  mod.rs  page.rs  roster_item.rs
prose_core_client/src/utils/: macros.rs  mod.rs
prose_core_client/tests/: load_messages.rs  storage.rs
prose_core_client_ffi/: Cargo.toml  build.rs  uniffi.toml
prose_core_client_ffi/src/: ProseCoreClientFFI.udl  account.rs  account_observer.rs  client.rs  error.rs  lib.rs  logger.rs
prose_core_client_ffi/src/account/: account.rs  account_observer.rs  mod.rs
prose_core_client_ffi/src/connection/: libstrophe_connection.rs  mod.rs  xmpp_connection.rs
prose_core_client_ffi/src/extensions/: chat.rs  debug.rs  mam.rs  mod.rs  presence.rs  profile.rs  roster.rs  xmpp_connection_context.rs
prose_core_client_ffi/src/helpers/: mod.rs
prose_core_client_ffi/src/test_helpers/: mocks.rs  mod.rs
prose_core_client_ffi/src/types/: delay.rs  forwarded_message.rs  message.rs  message_fastening.rs  message_reactions.rs  mod.rs  namespace.rs  presence.rs  roster.rs  stanza_id.rs
prose_core_client_ffi/tests/: chat.rs  chat_tests.rs  mam.rs  mam_tests.rs  presence_tests.rs  profile_tests.rs  roster.rs  roster_tests.rs  startup_tests.rs
prose_core_domain/: Cargo.toml
prose_core_domain/src/: ext.rs  lib.rs
prose_core_ffi/: Cargo.toml  build.rs  uniffi.toml
prose_core_ffi/src/: client.rs  lib.rs  logger.rs  prose_core_ffi.udl  uniffi_api.rs
prose_core_lib/: Cargo.toml
prose_core_lib/examples/: .env.example  bot.rs  multiple_connections.rs
prose_core_lib/examples/utils/: mod.rs
prose_core_lib/src/: client.rs  errors.rs  handlers.rs  lib.rs
prose_core_lib/src/connector/: connector.rs  mod.rs
prose_core_lib/src/dependencies/: id_provider.rs  mod.rs  time_provider.rs
prose_core_lib/src/helpers/: compound_module.rs  id_string_macro.rs  mod.rs  stanza_base_macro.rs  stanza_cow.rs  stanza_iterator.rs
prose_core_lib/src/modules/: context.rs  mod.rs  module.rs  request_future.rs
prose_core_lib/src/stanza/: mod.rs  namespace.rs  stanza.rs  stanza_base.rs
prose_core_lib/src/test_helpers/: mod.rs  test_connector.rs
tests/prose-core-integration-tests/: Cargo.toml
tests/prose-core-integration-tests/src/: lib.rs
tests/prose-store-integration-tests/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: ci.rs  main.rs  swift.rs  wasm.rs
(+902 files in other folders)
