[workspace]
members = [
	"crates/*",
	"bindings/*",
	"examples/*",
	"tests/*",
	"xtask",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.70"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
base64 = "0.21"
chrono = "0.4"
futures = "0.3"
insta = "1.3"
itertools = "0.12"
js-sys = "0.3"
mime = "0.3"
once_cell = "1.12"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.5"
thiserror = "1.0"
tokio = "1.26"
tracing = { version = "0.1" }
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
uniffi = "0.26"
url = "2.3"
uuid = {version = "1.1", features=["v4", "fast-rng", "macro-diagnostics"]}
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
minidom = { git = "https://gitlab.com/nesium/xmpp-rs", branch = "main" }
xmpp-parsers = { git = "https://gitlab.com/nesium/xmpp-rs", branch = "main" }
jid = { git = "https://gitlab.com/nesium/xmpp-rs", branch = "main", default-features = false }
tokio-xmpp = { git = "https://gitlab.com/nesium/xmpp-rs", branch = "main" }

#xmpp-parsers = { path = "../../xmpp-rs/parsers" }
#minidom = { path = "../../xmpp-rs/minidom" }
#jid = { path = "../../xmpp-rs/jid" }
#tokio-xmpp = { path = "../../xmpp-rs/tokio-xmpp" }

[profile.release]
lto = true
