[workspace]
members = [
    "crates/*",
    "bindings/*",
    "examples/*",
    "tests/*",
    "xtask",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.70"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
futures = "0.3"
insta = "1.3"
itertools = "0.13.0"
jid = { version = "0.11", default-features = false }
js-sys = "0.3"
mime = "0.3"
minidom = "0.16"
parking_lot = "0.12"
pretty_assertions = "1.4"
secrecy = "0.10"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.5"
thiserror = "1.0"
tokio = "1.26"
tokio-xmpp = "4.0"
tracing = { version = "0.1" }
tracing-log = "0.2.0"
tracing-subscriber = "0.3"
uniffi = "0.28"
url = "2.3"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
xmpp-parsers = { version = "0.21", features = ["disable-validation"] }
xso = "0.1"

[profile.release]
lto = true
