[package]
name = "prose_core_client"
version = "0.1.0"
description = "Prose core XMPP client manager and protocols."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[lib]
name = "prose_core_client"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
either = "1.8"
image = "0.24.5"
indexmap = "1.9"
itertools = { workspace = true }
jid = { workspace = true }
microtype = { workspace = true }
once_cell = { workspace = true }
prose_core_domain = { path = "../prose_core_domain" }
prose_core_lib = { path = "../prose_core_lib" }
prose_macros = { path = "../prose_macros" }
rusqlite = { version = "0.28.0", features = ["chrono", "url", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
sha1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = "3.5.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dialoguer = "0.10.3"
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "io-util", "io-std"] }
tracing-oslog = "0.1.2"
tracing-subscriber = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features=["build"] }

[[example]]
name = "cli"
path = "examples/cli.rs"