[package]
name = "prose_core_client_ffi"
version = "0.1.0"
description = "Prose core XMPP client manager and protocols."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[lib]
crate-type = ["staticlib"]
name = "prose_core_client_ffi"

[dependencies]
prose_core_client = { path = "../prose_core_client" }
jid = { version = "0.9", default-features = false }
uniffi_macros = "0.18"
uniffi = {version = "0.18", features=["builtin-bindgen"]}
thiserror = "1.0"

[build-dependencies]
uniffi_build = {version = "0.18", features=["builtin-bindgen"]}