[package]
name = "prose_core_client_ffi"
version = "0.1.0"
description = "Prose core XMPP client FFIs."
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Marc Bauer <mb@nesium.com>"]

[lib]
crate-type = ["staticlib", "rlib"]
name = "prose_core_client_ffi"

[dependencies]
jid = {version = "0.9", default-features = false}
uniffi_macros = "0.18"
uniffi = {version = "0.18", features=["builtin-bindgen"]}
thiserror = "1.0"
once_cell = "1.12"
libstrophe = "0.16"
log = {version = "0.4", features = ["std"]}
strum = "0.24"
strum_macros = "0.24"
uuid = {version = "1.1", features=["v4", "fast-rng", "macro-diagnostics"]}
chrono = "0.4"
mockiato = {version = "0.9", optional = true}
base64 = "0.13.0"
sha1 = "0.10.0"

[build-dependencies]
uniffi_build = {version = "0.18", features=["builtin-bindgen"]}

[features]
test-helpers = ["mockiato"]