[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
http = "0.2"
octocrab = "0.23"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
url = "2.3"
xshell = "0.2"