[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
#cargo-swift = "0.5"
clap = { version = "4.3", features = ["derive"] }
http = "0.2"
jid = { workspace = true }
octocrab = "0.38"
reqwest = { version = "0.11", features = ["stream"] }
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
toml_edit = "0.22"
url = "2.3"
xshell = "0.2"