[package]
name = "prose-core-client-wasm"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
console_error_panic_hook = "0.1"
indexed_db_futures = "0.3"
jid = { workspace = true }
js-sys = "0.3"
minidom = { workspace = true }
prose-core-client = { path = "../../crates/prose-core-client", features = ["js"] }
prose-domain = { path = "../../crates/prose-domain" }
prose-xmpp = { path = "../../crates/prose-xmpp" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.5"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
tsify = { version = "0.4", features = ["js", "wasm-bindgen"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-derive = "0.2.0"