[package]
name = "prose-core-client-wasm"
version = "0.1.7"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = "0.1"
jid = { workspace = true }
js-sys = { workspace = true }
microtype = { workspace = true }
minidom = { workspace = true }
prose-core-client = { path = "../../crates/prose-core-client" }
prose-domain = { path = "../../crates/prose-domain" }
prose-xmpp = { path = "../../crates/prose-xmpp" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.5"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-derive = "0.2.0"
web-sys = {version = "0.3", features = ["DomException"] }