[package]
name = "prose-sdk-js"
version = "0.1.81"
description = "Prose JavaScript SDK"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client/tree/master/bindings/prose-sdk-js"
repository = "https://github.com/prose-im/prose-core-client.git"
authors = ["Prose Foundation <dev@prose.org>"]
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = "0.1"
jid = { workspace = true }
js-sys = { workspace = true }
mime = { workspace = true }
minidom = { workspace = true }
prose-core-client = { path = "../../crates/prose-core-client" }
prose-xmpp = { path = "../../crates/prose-xmpp" }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
url = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-derive = "0.2.0"
wasm-bindgen-futures = { workspace = true }
web-sys = { version = "0.3", features = ["DomException"] }
