[package]
name = "prose-core-client"
version = "0.1.0"
description = "Prose core XMPP client manager and protocols."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
indexmap = "2.0.0"
itertools = { workspace = true }
jid = { workspace = true, features = ["serde"] }
minidom = { workspace = true }
nanoid = "0.4"
parking_lot = { workspace = true }
paste = "1.0"
prose-proc-macros = { path = "../prose-proc-macros" }
prose-store = { path = "../prose-store", features = ["chrono", "jid"] }
prose-utils = { path = "../prose-utils" }
prose-wasm-utils = { path = "../prose-wasm-utils" }
prose-xmpp = { path = "../prose-xmpp" }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
xmpp-parsers = { workspace = true }
mockall = { version = "0.11", optional = true }
derivative = { version = "2.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["serde"] }
either = { version = "1.8" }
image = {version = "0.24.5" }
serde_json = { workspace = true }
tempfile = { workspace = true }
# Test
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[features]
debug = []
default = []
test = ["prose-xmpp/test", "dep:tokio", "tokio/macros", "dep:mockall", "dep:derivative"]
trace-stanzas = ["prose-xmpp/trace-stanzas"]