[package]
name = "prose-core-client"
version = "0.1.0"
description = "Prose core XMPP client manager and protocols."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[dependencies]
aes-gcm = "0.10"
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
derivative = { version = "2.2", optional = true }
futures = { workspace = true }
indexmap = "2.0.0"
itertools = { workspace = true }
jid = { workspace = true, features = ["serde"] }
mime = { workspace = true }
mime_guess = { version = "2.0", default-features = false }
minidom = { workspace = true }
mockall = { version = "0.12.1", optional = true }
nanoid = "0.4"
parking_lot = { workspace = true }
paste = "1.0"
prose-proc-macros = { path = "../prose-proc-macros" }
prose-store = { path = "../prose-store", features = ["chrono", "jid", "uuid"] }
prose-utils = { path = "../prose-utils" }
prose-wasm-utils = { path = "../prose-wasm-utils" }
prose-xmpp = { path = "../prose-xmpp" }
rand = "0.8"
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
xmpp-parsers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["serde"] }
either = { version = "1.8" }
image = { version = "0.24.5" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.41.2" }
serde_json = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[features]
debug = []
default = []
test = ["prose-xmpp/test", "tokio/macros", "dep:mockall", "dep:derivative"]
trace-stanzas = ["prose-xmpp/trace-stanzas"]