[package]
name = "prose-proc-macros"
version = "0.1.0"
description = "Macros used throughout the project"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Marc Bauer <mb@nesium.com>"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }