[package]
name = "prose-wasm-utils"
version = "0.1.0"
description = "Utils required for Wasm interop"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Marc Bauer <mb@nesium.com>"]

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "time"] }
tokio-stream = "0.1"