[package]
name = "prose-xmpp"
version = "0.1.0"
description = "Prose core XMPP library."
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-core-client"
repository = "https://github.com/prose-im/prose-core-client.git"
keywords = ["xmpp", "xmpp-client", "library"]
categories = ["network-programming"]
authors = ["Marc Bauer <mb@nesium.com>"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
jid = { workspace = true }
minidom = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xmpp-parsers = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "signal"] }
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", rev = "f9d44195133fa6b9bfd006ae3e2cd3d13210679a" }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
default = []
test = []
