[package]
name = "prose-core-client-cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
common = { path = "../common" }
dialoguer = "0.10.3"
jid = { workspace = true }
minidom = { workspace = true }
prose-core-client = { path = "../../crates/prose-core-client", features = ["debug", "trace-stanzas"] }
prose-xmpp = { path = "../../crates/prose-xmpp" }
regex = "1.10"
reqwest = { version = "0.11", features = ["stream"] }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

[features]
insecure-tcp = ["prose-core-client/insecure-tcp"]