[package]
name = "prose-core-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
jid = { workspace = true }
parking_lot = { workspace = true }
prose-xmpp = { path = "../../crates/prose-xmpp" }
tempfile = { workspace = true }
xmpp-parsers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
prose-core-client = { path = "../../crates/prose-core-client", features = ["test"] }
prose-store = { path = "../../crates/prose-store" }
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
prose-core-client = { path = "../../crates/prose-core-client", features = ["test"] }
wasm-bindgen-test = "0.3.33"