[package]
name = "prose-core-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
jid = { workspace = true }
minidom = { workspace = true }
parking_lot = { workspace = true }
pretty_assertions = { workspace = true }
prose-core-client = { path = "../../crates/prose-core-client", features = ["test"] }
prose-proc-macros = { path = "../../crates/prose-proc-macros" }
prose-store = { path = "../../crates/prose-store" }
prose-xmpp = { path = "../../crates/prose-xmpp" }
tempfile = { workspace = true }
xml-rs = "0.8"
xmpp-parsers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3.33"