[package]
name = "prose-store-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jid = { workspace = true, features = ["serde"] }
pretty_assertions = { workspace = true }
prose-store = { path = "../../crates/prose-store", features = ["test", "chrono", "jid"] }
serde = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
insta = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3.33"